[gd_scene load_steps=10 format=3 uid="uid://bvwxccjg0l0wf"]

[ext_resource type="Script" path="res://src/actor.gd" id="1_o8ftd"]
[ext_resource type="Script" path="res://src/interact_ray.gd" id="2_l4dix"]
[ext_resource type="Script" path="res://src/state_machine.gd" id="3_kkl8j"]

[sub_resource type="AnimationRootNode" id="AnimationRootNode_jgw0v"]

[sub_resource type="SphereShape3D" id="SphereShape3D_y1i2u"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_mvv3f"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_ssdyd"]
material = SubResource("StandardMaterial3D_mvv3f")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_hqt4h"]
transparency = 1
albedo_color = Color(0.8, 0.8, 0, 0.0941176)

[sub_resource type="BoxMesh" id="BoxMesh_wog6w"]
material = SubResource("StandardMaterial3D_hqt4h")
size = Vector3(1, 0.02, 1)

[node name="Actor" type="CharacterBody3D"]
script = ExtResource("1_o8ftd")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationRootNode_jgw0v")
anim_player = NodePath("../AnimationPlayer")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("SphereShape3D_y1i2u")

[node name="InteractRay" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
target_position = Vector3(0, 0, -1.5)
collision_mask = 4
script = ExtResource("2_l4dix")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
mesh = SubResource("BoxMesh_ssdyd")

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("3_kkl8j")

[node name="TargetMarker" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_wog6w")
